<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tic Tac Toe</string>
    <string name="action_settings">Settings</string>
    <string name="enter_names">Enter Names</string>
    <string name="player1_name">Player1 Name</string>
    <string name="player2_name">Player2 Name</string>
    <string name="BtnSave">Save</string>
    <string name="BtnReset">Reset Stats</string>
    <string name="GameActivity">Game on</string>
    <string name="DisplayStatistics">Statistics</string>
    <string name="BtnBack">Back to Menu</string>

</resources>
