<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/b4"
    tools:context="com.horopter.tictactoe.DisplayStatsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:hint="@string/player1_name"
        android:id="@+id/StatP1"
        android:layout_marginTop="63dp"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:hint="@string/player2_name"
        android:id="@+id/StatP2"
        android:layout_below="@+id/StatP1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="43dp" />

    <Button
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:background="@drawable/custom_button"
        android:textSize="20sp"
        android:textColor="#ADFFAD"
        android:text="@string/BtnReset"
        android:id="@+id/BtnReset"
        android:onClick="reset_stats"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:background="@drawable/custom_button"
        android:textSize="20sp"
        android:textColor="#ADFFAD"
        android:text="@string/BtnBack"
        android:id="@+id/BtnBack"
        android:onClick="back"
        android:layout_alignTop="@+id/BtnReset"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
