<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/b2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.horopter.tictactoe.PlayerRegistrationActivity"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:textSize="20sp"
        android:hint="@string/player1_name"
        android:ems="12"
        android:id="@+id/Player1_name"
        android:layout_marginTop="63dp"
        android:maxLength="20"
        android:background="@drawable/custom_edittext"/>

    <EditText
        android:background="@drawable/custom_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:textSize="20sp"
        android:hint="@string/player2_name"
        android:ems="12"
        android:id="@+id/Player2_name"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/Player1_name"
        android:layout_alignLeft="@+id/Player1_name"
        android:layout_alignStart="@+id/Player1_name"
        android:maxLength="20" />

    <Button
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:background="@drawable/custom_button"
        android:textSize="20sp"
        android:textColor="#ADFFAD"
        android:id="@+id/BtnSave"
        android:text="@string/BtnSave"
        android:layout_below="@+id/Player2_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="save"
        android:layout_marginTop="58dp" />

    <Button
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:background="@drawable/custom_button"
        android:textSize="20sp"
        android:textColor="#ADFFAD"
        android:text="@string/BtnBack"
        android:id="@+id/BtnBack"
        android:onClick="back"
        android:layout_alignTop="@+id/BtnSave"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
